Fix scrollbars

--- a/turbo-admin.css
+++ b/turbo-admin.css
@@ -54,8 +54,24 @@
 	width: 100%;
 	height: 80%;
 	max-height: 300px;
-	overflow: scroll;
+	overflow-x: hidden;
+	overflow-y: scroll;
 	color: #FFF;
+	scrollbar-width: thin;          /* "auto" or "thin" */
+    scrollbar-color: #444 #000;   /* scroll thumb and track */
+}
+#ta-command-palette-items::-webkit-scrollbar {
+  width: 6px;               /* width of the entire scrollbar */
+}
+
+#ta-command-palette-items::-webkit-scrollbar-track {
+  background: #000;        /* color of the tracking area */
+}
+
+#ta-command-palette-items::-webkit-scrollbar-thumb {
+  background-color: #444;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 0px none;  /* creates padding around scroll thumb */
 }
 
 #ta-command-palette li {
